updated sections colours, register btn white

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -42,6 +42,10 @@
       width: 55%
       height: auto
       margin-top: -50px
+    .description-text
+      margin-top: 0px
+      .text
+        text-align: justify  
     .features
       margin-top: 50px
       .feature
@@ -114,6 +118,9 @@
           margin: 0 auto
         &.full-width img
           width: 100%
+        a
+          background-color: transparent !important
+          color: #ffffff !important  
         a:visited, a:link
           text-decoration: none
 
@@ -143,8 +150,11 @@
       .activity-title
         font-weight: 700
         margin-top: 10px
-      .activity-date, .activity-time, .activity-place, .ativity-speaker
+      .activity-date, .activity-time, .activity-place, .activity-speaker
         margin-top: 0px
+        a
+          background-color: transparent !important
+          color: #ffffff !important
       .activity-desc
         margin-top: 10px
 
