main logo updated. org: still missing urls

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
 <meta property="og:title" content="{{ site.title }}" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://cesium.di.uminho.pt/codeweek" />
+<meta property="og:url" content="dezembrosolidario.cesium.di.uminho.pt" />
 <meta property="og:image" content="http://cesium.di.uminho.pt/codeweek/img/og-image.png" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
