--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <meta property="og:title" content="{{ site.title }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="dezembrosolidario.cesium.di.uminho.pt" />
-<meta property="og:image" content="http://cesium.di.uminho.pt/codeweek/img/og-image.png" />
+<meta property="og:image" content="http://dezembrosolidario.cesium.di.uminho.pt/img/og-image.png" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
 <link rel="stylesheet" href="stylesheets/combo.css">
