--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -113,6 +113,7 @@
           color: #ffffff !important
       .activity-desc
         margin-top: 10px
+        text-align: justify
 
 @media screen and (min-width: 525px)
   #main
