added zoom in&out img

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -102,6 +102,10 @@
 
   .activity
     padding: 50px
+    .activity-img
+      transition: -webkit-transform 0.3s ease
+      &:active
+        -webkit-transform: scale(2)
     .activity-info
       .activity-title
         font-weight: 700
