hover instead of active

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -104,7 +104,7 @@
     padding: 50px
     .activity-img
       transition: -webkit-transform 0.3s ease
-      &:active
+      &:hover
         -webkit-transform: scale(2)
     .activity-info
       .activity-title
