--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -110,7 +110,7 @@
       .activity-title
         font-weight: 700
         margin-top: 10px
-      .activity-date, .activity-time, .activity-place, .activity-speaker
+      .activity-date, .activity-time, .activity-place, .activity-speaker, .activity-org
         margin-top: 0px
         a
           background-color: transparent !important
