--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -103,9 +103,11 @@
   .activity
     padding: 50px
     .activity-img
-      transition: -webkit-transform 0.3s ease
-      &:hover
-        -webkit-transform: scale(2.1)
+      a
+        background-color: transparent !important
+        color: #ffffff !important
+        &:hover
+          opacity: 0.7
     .activity-info
       .activity-title
         font-weight: 700
