--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="site.js"></script>
+<script src="lightbox.js"></script>
 <script src="snowstorm-min.js"></script>
 <script>
   snowStorm.usePositionFixed = true;
