trying to make svg responsive on safari

--- a/stylesheets/_sass/_tree.scss
+++ b/stylesheets/_sass/_tree.scss
@@ -1,7 +1,9 @@
 #tree {
-	max-width: 150px;
 	display: block;
 	margin: 0 auto;
+	max-width:20%!important;
+  	height:auto;
+  	vertical-align:middle;
 }
 
 $colors: (
