--- a/stylesheets/_sass/_tree.scss
+++ b/stylesheets/_sass/_tree.scss
@@ -1,9 +1,8 @@
 #tree {
+	max-width: 15%;
+	width: 15%;
 	display: block;
 	margin: 0 auto;
-	max-width:20%!important;
-  	height:auto;
-  	vertical-align:middle;
 }
 
 $colors: (
