--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -104,7 +104,7 @@
 @media screen and (min-width: 525px)
   #main
     .img-mobile
-      display: none          
+      display: none           
 
 @media screen and (max-width: 767px)
   #main
@@ -142,4 +142,6 @@
           display: none !important
   #main
     .img-desktop
-      display: none         
+      display: none 
+    .lightrope
+      display: none           
