--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -83,11 +83,15 @@
   .activity
     padding: 50px
     .activity-img
+      img
+        border: 2px solid white
       a
         background-color: transparent !important
         color: #ffffff !important
         &:hover
           opacity: 0.7
+    .logo-img
+
     .activity-info
       .activity-title
         font-weight: 700
@@ -130,6 +134,11 @@
           width: 40%
           margin: 0 auto
           float: none
+        .logo-img
+          width: 40%
+          margin: 0 auto
+          float: none  
+
 
   #sidenav-overlay
     z-index: 50
