comment selector without properties

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -90,7 +90,7 @@
         color: #ffffff !important
         &:hover
           opacity: 0.7
-    .logo-img
+//    .logo-img
 
     .activity-info
       .activity-title
