--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -23,6 +23,10 @@
         text-align: center
 
   #contacts
+    .icon-title
+      display: none
+    h2,h3
+      padding: 50px
     padding-bottom: 50px
     .fa-users
       font-size: 110px
