breaks organization into sperate areas

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -23,8 +23,9 @@
         text-align: center
 
   #contacts
-    .icon-title
-      display: none
+    .apoio
+      display: block
+      margin: auto
     h2,h3
       padding: 50px
     padding-bottom: 50px
