--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -23,34 +23,15 @@
         text-align: center
 
   #contacts
-    padding-bottom: 50px
+    padding-bottom: 75px
     .fa-users
       font-size: 110px
-    .contacts
       .organiser-logo
         margin: 0 auto
         display: block
         width: 60%
         svg path
           fill: #EAEAEA
-      .SocialBox
-        font-size: 30px
-        margin-bottom: 0px
-        display: flex
-        display: -webkit-flex
-        flex-direction: row
-        -webkit-flex-direction: row
-        justify-content: center
-        -webkit-justify-content: center
-        align-items: flex-start
-        div
-          margin: 5px
-        a
-          color: #FAFAFA
-          margin: 10px
-          &:hover, &:focus
-            color: #EB7956
-            margin: 10px
     .slick-slider
       .slick-track
         display: flex
@@ -92,24 +73,6 @@
         width: 60%
         svg path
           fill: #EAEAEA
-      .SocialBox
-        font-size: 30px
-        margin-bottom: 0px
-        display: flex
-        display: -webkit-flex
-        flex-direction: row
-        -webkit-flex-direction: row
-        justify-content: center
-        -webkit-justify-content: center
-        align-items: flex-start
-        div
-          margin: 5px
-        a
-          color: #FAFAFA
-          margin: 10px
-          &:hover, &:focus
-            color: #EB7956
-            margin: 10px
     .slick-slider
       .slick-track
         display: flex
@@ -209,8 +172,13 @@
   #main
     #contacts
       .slick-slider
+        margin-bottom: 75px
         .slick-prev, .slick-next
           display: none !important
+    #supporters
+      .slick-slider
+        .slick-prev, .slick-next
+          display: none !important      
   #main
     .img-desktop
       display: none
