:recycle: Clean up project structure
- change file permissions
- refactor assets folders

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
 
 <meta property="og:title" content="{{ site.title }}" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="dezembrosolidario.cesium.di.uminho.pt" />
-<meta property="og:image" content="http://dezembrosolidario.cesium.di.uminho.pt/img/og-image.png" />
+<meta property="og:url" content="https://dezembrosolidario.cesium.di.uminho.pt" />
+<meta property="og:image" content="https://dezembrosolidario.cesium.di.uminho.pt/img/og-image.png" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
-<link rel="stylesheet" href="stylesheets/combo.css">
-<link rel="stylesheet" href="stylesheets/style.css">
-<link rel="stylesheet" href="stylesheets/lightbox.css">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/lightbox.css">
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css">
