--- a/css/style.sass
+++ b/css/style.sass
@@ -1,9 +1,10 @@
 ---
 ---
 
+@charset "utf-8"
+
 @import "lib/base"
 @import "lib/skeleton"
-// @import "main"
 @import "custom"
 @import "tree"
 @import "lights"
