donation cards update

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -129,6 +129,8 @@
       .activity-desc
         margin-top: 10px
         text-align: justify
+    .donation-card
+      background-color: #ffffff !important
 
 @media screen and (min-width: 525px)
   #main
