donation cards update

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -131,6 +131,8 @@
         text-align: justify
     .donation-card
       background-color: #ffffff !important
+      color: #70161a !important
+      margin: 5px
 
 @media screen and (min-width: 525px)
   #main
