donation cards update

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -133,6 +133,7 @@
       background-color: #ffffff !important
       color: #70161a !important
       margin: 5px
+      border-radius: 25px
 
 @media screen and (min-width: 525px)
   #main
