--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -134,6 +134,8 @@
       color: #70161a !important
       margin: 5px
       border-radius: 25px
+      .donation-title
+        margin-top: 5px
 
 @media screen and (min-width: 525px)
   #main
