finished donation cards

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -129,13 +129,20 @@
       .activity-desc
         margin-top: 10px
         text-align: justify
+    .donation-row
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      justify-content: center
+      align-items: center
     .donation-card
       background-color: #ffffff !important
       color: #70161a !important
-      margin: 5px
+      text-align: center
+      margin: 10px
       border-radius: 25px
       .donation-title
-        margin-top: 5px
+        padding-top: 15px
 
 @media screen and (min-width: 525px)
   #main
@@ -148,7 +155,7 @@
       .fa-users
         font-size: 90px
 
-@media screen and (max-width: 800px)
+@media screen and (max-width: 600px)
   #main
     #description
       .feature
