:bug: Fix insecure mixed content
We had both https and http requests over our website.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div id="footer" class="section text-white">
   <div class="container">
-    <p>made with <i class="fa fa-heart"></i> by <a href="http://www.cesium.di.uminho.pt" target="_blank">CeSIUM</a></p>
+    <p>made with <i class="fa fa-heart"></i> by <a href="https://www.cesium.di.uminho.pt" target="_blank">CeSIUM</a></p>
   </div>
 </div>
 {% include scripts.html %}
