Add 2020 edition updates (#32)

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -129,6 +129,20 @@
       .activity-desc
         margin-top: 10px
         text-align: justify
+    .donation-row
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      justify-content: center
+      align-items: center
+    .donation-card
+      background-color: #ffffff !important
+      color: #70161a !important
+      text-align: center
+      margin: 10px
+      border-radius: 25px
+      .donation-title
+        padding-top: 15px
 
 @media screen and (min-width: 525px)
   #main
