--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,10 @@
 <meta name="description" content="{{ site.description }}">
 
 <meta property="og:title" content="{{ site.title }}" />
+<meta property="og:description" content="{{ site.description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://dezembrosolidario.cesium.di.uminho.pt" />
-<meta property="og:image" content="https://dezembrosolidario.cesium.di.uminho.pt/img/og-image.png" />
+<meta property="og:image" content="img/og-image.png" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
 <link rel="stylesheet" href="css/main.css">
